--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.9.1",
+    "classnames": "^2.2.5",
     "fastclick": "^1.0.6",
     "history": "^3.0.0",
     "igloo-ext": "^0.1.6",
+    "lodash": "^4.13.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-dropzone": "^3.5.3",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
     "webpack-glsl-loader": "^1.0.1",
     "whatwg-fetch": "^1.0.0"
   },
@@ -53,6 +56,7 @@
     "pixrem": "^3.0.1",
     "pleeease-filters": "^3.0.0",
     "postcss": "^5.1.0",
+    "postcss-assets": "^4.1.0",
     "postcss-calc": "^5.3.0",
     "postcss-color-function": "^2.0.1",
     "postcss-custom-media": "^5.0.1",
