--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-dropzone": "^3.5.3",
+    "react-photo-gallery": "^4.2.11",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
