--- a/pages/home/projects.json
+++ b/pages/home/projects.json
@@ -13,7 +13,7 @@
     "desc": "Real-time Alpha matting algorithm.",
     "links": {
       "github": "https://github.com/kingfolk/shared_matting_webgl",
-      "demo": "/projects/shared_matting_webgl"
+      "demo": "/shared_matting_webgl"
     }
   },
   {
