--- a/pages/home/projects.json
+++ b/pages/home/projects.json
@@ -1,35 +1,39 @@
 [
   {
+    "id": "waldBoost",
     "title": "WaldBoost",
-    "cover": "./waldBoostChart.jpg",
+    "cover": "./images/waldBoostChart.jpg",
     "desc": "Boosting Algorithm for training quality corner detector",
     "links": {
       "github": "https://github.com/kingfolk/waldboost"
     }
   },
   {
+    "id": "sharedMatting",
     "title": "Shared Matting WebGL",
-    "cover": "./doll.png",
+    "cover": "./images/doll.png",
     "desc": "Real-time Alpha matting algorithm.",
     "links": {
       "github": "https://github.com/kingfolk/shared_matting_webgl",
-      "demo": "/shared_matting_webgl"
+      "demo": "/projects/shared_matting_webgl"
     }
   },
   {
+    "id": "iglooSwift",
     "title": "Igloo in Apple/Swift",
-    "cover": "./igloo.jpg",
+    "cover": "./images/igloo.jpg",
     "desc": "An easy-to-use OpenGL wrapper for GPGPU developed with Apple/Swift.",
     "links": {
       "github": "https://github.com/kingfolk/igloo"
     }
   },
   {
+    "id": "featherweightJava",
     "title": "Featherweight Java in Scala",
-    "cover": "./java.jpg",
+    "cover": "./images/java.jpg",
     "desc": "An Featherweight Java language implemented in Scala.",
     "links": {
-      "github": "https://github.com/kingfolk/FeatherweightJava"
+      "github": "https://github.com/kingfolk/Featherweight-Java"
     }
   }
 ]
